Adicionando cruds de setup e refatorando criação de pieces e começando autenticação